--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
           <title>W. Jeffrey Johnston - Summary</title>
         <meta charset="utf-8" />
-	<link rel="stylesheet" href="http://wj2.github.io/theme/css/main.css" />
+	<link rel="stylesheet" href="https://wj2.github.io/theme/css/main.css" />
 
 
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://wj2.github.io/">W. Jeffrey Johnston <strong></strong></a></h1>
+                <h1><a href="https://wj2.github.io/">W. Jeffrey Johnston <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li class="active"><a href="http://wj2.github.io/">Summary</a></li>
+            <li class="active"><a href="https://wj2.github.io/">Summary</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Summary</h1>
     
