--- a/tags.html
+++ b/tags.html
@@ -3,15 +3,15 @@
 <head>
         <title>W. Jeffrey Johnston - Tags</title>
         <meta charset="utf-8" />
-	<link rel="stylesheet" href="http://wj2.github.io/theme/css/main.css" />
+	<link rel="stylesheet" href="https://wj2.github.io/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://wj2.github.io/">W. Jeffrey Johnston <strong></strong></a></h1>
+                <h1><a href="https://wj2.github.io/">W. Jeffrey Johnston <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="http://wj2.github.io/">Summary</a></li>
+            <li><a href="https://wj2.github.io/">Summary</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Tags for W. Jeffrey Johnston</h1>
     <ul>
