developed organization and content

--- a/categories.html
+++ b/categories.html
@@ -3,20 +3,24 @@
 <head>
         <title>W. Jeffrey Johnston - Categories</title>
         <meta charset="utf-8" />
-	<link rel="stylesheet" href="https://wj2.github.io/theme/css/main.css" />
+	<link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
-        <header id="banner" class="body">
-                <h1><a href="https://wj2.github.io/">W. Jeffrey Johnston <strong></strong></a></h1>
+  <div id="content">
+  <header id="banner" class="body">
+    <h1><a href="./">W. Jeffrey Johnston <strong></strong></a></h1>
         </header><!-- /#banner -->
-        <nav id="menu"><ul>
-            <li><a href="https://wj2.github.io/">Summary</a></li>
+        <nav id="menu"><ul id="navlist">
+            <li class="navitem"><a href=".">Summary</a></li>
+            <li class="navitem"><a href="projects.html">Research projects</a></li>
+            <li class="navitem"><a href="/cv/wjj_cv.pdf">CV</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Categories on W. Jeffrey Johnston</h1>
     <ul>
     </ul>
-        <footer id="contentinfo" class="body">
+  </div>
+        <footer id="contentinfo" class="footer">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
