updates to project description

--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,9 @@
 <p>I have a broad interest in how the neural code can be made robust to the
 widespread response variability (i.e., noise) that exists in the brain.</p>
 <h3>Nonlinear mixed selectivity</h3>
-<p>Recently, along with Stephanie Palmer and Dave Freedman, I have shown that one
-strategy the brain can use to achieve reliable transmission in the face of
-noise is the conjunctive mixing of stimulus feature
-representations (i.e., nonlinear mixed selectivity). That is, having single
+<p>With Stephanie Palmer and Dave Freedman, I showed that conjunctive nonlinear
+mixed selectivity produces metabolically efficient and reliably decoded
+neural representations. That is, having single
 neurons that code for particular
 combinations of stimulus feature values (i.e., a mixed code) produces a
 representation of the stimuli that is more robust to noise than a
@@ -37,16 +36,16 @@ features separate (i.e., a pure code). In this work, we also outline several
 important tradeoffs between mixed codes that combine different numbers of
 distinct features, including required
 population sizes and optimal receptive field sizes in feature space. </p>
-<p>Due to the ubiquity of mixed codes in the brain, we believe this description of
+<p>Due to the ubiquity of mixed codes, we believe this description of
 their reliability and its tradeoffs will provide important tools that can be
 used to understand the nature of representations across many different brain
 regions and even different kinds of brains. </p>
 <h4>Further materials</h4>
 <ol>
-<li><em>Submitted manuscript:</em> W. Jeffrey Johnston, Stephanie E. Palmer,
+<li><em>Submitted manuscript:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer,
 David J. Freedman. Nonlinear mixed selectivity supports reliable neural
 computation. | <a href="https://doi.org/10.1101/577288">preprint</a></li>
-<li><em>Recent poster:</em> W. Jeffrey Johnston, Stephanie E. Palmer, David J. Freedman
+<li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer, David J. Freedman
 Nonlinear mixed selectivity produces noise-tolerant representations.
 | <a href="/research_materials/poster_grsgrc2018_ink.pdf">presented at the GRC: Neurobiology of Cognition
 2018</a></li>
@@ -62,8 +61,7 @@ distributed nature of information in the brain and the necessity of
 simultaneously representing
 variable numbers of stimuli are likely to both constrain neural representations
 in interesting ways.</p>
-<p>I am approaching these questions using both experiments in non-human primates
-and theory. </p>
+<p>I am approaching these questions using both experiments and theory. </p>
 
   </div>
         <footer id="contentinfo" class="footer">
