added more detail about research projects, along with some additional posters; updated cv

--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,8 @@ regions and even different kinds of brains. </p>
 <li><em>Submitted manuscript:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer,
 David J. Freedman. Nonlinear mixed selectivity supports reliable neural
 computation. | <a href="https://doi.org/10.1101/577288">preprint</a></li>
-<li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer, David J. Freedman
-Nonlinear mixed selectivity produces noise-tolerant representations.
+<li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer, David J.
+Freedman. Nonlinear mixed selectivity produces noise-tolerant representations.
 | <a href="/research_materials/poster_grsgrc2018_ink.pdf">presented at the GRC: Neurobiology of Cognition
 2018</a></li>
 </ol>
@@ -61,7 +61,60 @@ distributed nature of information in the brain and the necessity of
 simultaneously representing
 variable numbers of stimuli are likely to both constrain neural representations
 in interesting ways.</p>
-<p>I am approaching these questions using both experiments and theory. </p>
+<h3>Solving the assignment problem</h3>
+<p>An observer watching a barking dog and purring cat together in a field has
+distinct pairs of representations of the two animals in their visual and
+auditory systems. Without prior knowledge, how does the observer infer that the
+dog barks and the cat purrs? This binding of disparate representations is called
+the assignment problem, and it must be solved to integrate distinct
+representations across but also within sensory modalities. In this project, I
+identify and analyze a solution to the assignment problem: the representation of
+one or more
+common stimulus features in pairs of relevant brain regions –- for example,
+estimates of the spatial position of both the cat and the dog represented in
+both the visual and auditory systems. Using a statistical model, I derive the
+assignment error rate as a function of the number of stimuli, the number of
+features that define each stimulus, the number of common features, and the mean
+squared-error, or distortion, of each stimulus feature when decoded. Using
+rate-distortion theory, I derive the number of bits of information necessary to
+achieve a particular assignment error rate and level of distortion. The model
+reveals two tradeoffs for a fixed number of bits: first, increasing the number of
+common features decreases the assignment error rate but increases
+distortion -- that is, makes the estimate of each stimulus noisier; second,
+representing the common features with different distortion across the two brain
+regions decreases distortion across all features but increases the assignment error
+rate. These tradeoffs balance redundancy, which reduces the assignment error rate,
+and efficiency, which reduces distortion. Assignment errors reported in humans are
+broadly consistent with our model; we also make further, specific predictions that
+are yet to be tested.</p>
+<p>I am currently preparing a manuscript describing these results.</p>
+<h4>Further materials</h4>
+<ol>
+<li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong> and David J. Freedman.
+Two tradeoffs between local accuracy and catastrophic errors in a solution to
+the representation assignment problem.
+| <a href="/research_materials/poster_assignment_sfn2019.pdf">presented at SfN Neuroscience
+2019</a></li>
+</ol>
+<h3>Differences in dorsal and ventral stream representations of natural images</h3>
+<p>In my experimental work, I have recorded from the inferotemporal cortex (ITC),
+a region in the canonical ventral visual stream, and the lateral intraparietal
+area (LIP), a region in the canonical dorsal visual stream, during the
+performance of three natural image-based behavioral tasks. I am taking multiple
+approaches to analyze this rich set of data.</p>
+<p>As a first pass, I characterized
+the prevalence of single neuron tuning for different task and stimulus factors,
+and contrasted how the representation of these factors changes across different
+tasks. The results of some of these analyses are shown in the poster below.</p>
+<h4>Further materials</h4>
+<ol>
+<li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong>, Krithika Mohan, and David J.
+Freedman.
+What goes where: Using stimulus representations from both visual streams to
+guide behavior.
+| <a href="/research_materials/poster_dvpltsdmst_sfn2018_ink.pdf">presented at SfN Neuroscience
+2018</a></li>
+</ol>
 
   </div>
         <footer id="contentinfo" class="footer">
