--- a/categories.html
+++ b/categories.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
         <title>W. Jeffrey Johnston - Categories</title>
         <meta charset="utf-8" />
