--- a/projects.html
+++ b/projects.html
@@ -68,26 +68,19 @@ distinct pairs of representations of the two animals in their visual and
 auditory systems. Without prior knowledge, how does the observer infer that the
 dog barks and the cat purrs? This binding of disparate representations is called
 the assignment problem, and it must be solved to integrate distinct
-representations across but also within sensory modalities. In this project, I
-identify and analyze a solution to the assignment problem: the representation of
-one or more
-common stimulus features in pairs of relevant brain regions –- for example,
+representations across but also within sensory modalities. In my work on the
+assignment problem, I analyze perhaps the most straightforward solution: the
+representation of one or more common pieces of stimulus information in pairs of
+relevant brain regions -- for instance, in the example above,
 estimates of the spatial position of both the cat and the dog represented in
-both the visual and auditory systems. Using a statistical model, I derive the
-assignment error rate as a function of the number of stimuli, the number of
-features that define each stimulus, the number of common features, and the mean
-squared-error, or distortion, of each stimulus feature when decoded. Using
-rate-distortion theory, I derive the number of bits of information necessary to
-achieve a particular assignment error rate and level of distortion. The model
-reveals two tradeoffs for a fixed number of bits: first, increasing the number of
-common features decreases the assignment error rate but increases
-distortion -- that is, makes the estimate of each stimulus noisier; second,
-representing the common features with different distortion across the two brain
-regions decreases distortion across all features but increases the assignment error
-rate. These tradeoffs balance redundancy, which reduces the assignment error rate,
-and efficiency, which reduces distortion. Assignment errors reported in humans are
-broadly consistent with our model; we also make further, specific predictions that
-are yet to be tested.</p>
+both the visual and auditory systems. Proceeding from here, I describe a
+tradeoff between the frequency of assignment errors (e.g., the purring dog and
+barking cat) and the fidelity of stimulus representations within each region
+(e.g., the precision of the representation of the cat's face) that is mediated
+by a general tradeoff between redundancy and efficiency. Assignment errors
+reported in humans are
+broadly consistent with our model; we also make further, specific predictions
+that are yet to be tested.</p>
 <p>I am currently preparing a manuscript describing these results.</p>
 <h4>Further materials</h4>
 <ol>
