added link to repository for NMS code

--- a/projects.html
+++ b/projects.html
@@ -45,11 +45,13 @@ regions and even different kinds of brains. </p>
 <ol>
 <li><em>Submitted manuscript:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer,
 David J. Freedman. Nonlinear mixed selectivity supports reliable neural
-computation. | <a href="https://doi.org/10.1101/577288">preprint</a></li>
+computation. | <a href="https://doi.org/10.1101/577288">preprint</a> </li>
 <li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer, David J.
 Freedman. Nonlinear mixed selectivity produces noise-tolerant representations.
 | <a href="/research_materials/poster_grsgrc2018_ink.pdf">presented at the GRC: Neurobiology of Cognition
 2018</a></li>
+<li><em>Code:</em> Available in
+<a href="https://github.com/wj2/nms_error-correction">this repository</a>.</li>
 </ol>
 <h2>Distributed representation of multiple stimuli</h2>
 <p>I am broadly interested in how different brain regions interact with each other
