changed name of research projects to just research, for formatting reasons

--- a/archives.html
+++ b/archives.html
@@ -14,7 +14,7 @@
         </header><!-- /#banner -->
         <nav id="menu"><ul id="navlist">
             <li class="navitem"><a href=".">Summary</a></li>
-            <li class="navitem"><a href="projects.html">Research projects</a></li>
+            <li class="navitem"><a href="projects.html">Research</a></li>
             <li class="navitem"><a href="/cv/wjj_cv.pdf">CV</a></li>
         </ul></nav><!-- /#menu -->
 <h1>Archives for W. Jeffrey Johnston</h1>
