--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-          <title>W. Jeffrey Johnston - Research projects</title>
+          <title>W. Jeffrey Johnston - Research</title>
         <meta charset="utf-8" />
 	<link rel="stylesheet" href="./theme/css/main.css" />
 
@@ -16,10 +16,10 @@
         </header><!-- /#banner -->
         <nav id="menu"><ul id="navlist">
             <li class="navitem"><a href=".">Summary</a></li>
-            <li class="navitem"><a href="projects.html">Research projects</a></li>
+            <li class="navitem"><a href="projects.html">Research</a></li>
             <li class="navitem"><a href="/cv/wjj_cv.pdf">CV</a></li>
         </ul></nav><!-- /#menu -->
-    <h1>Research projects</h1>
+    <h1>Research</h1>
     
 
     <h2>Reliable neural representations</h2>
