--- a/authors.html
+++ b/authors.html
@@ -14,7 +14,7 @@
         </header><!-- /#banner -->
         <nav id="menu"><ul id="navlist">
             <li class="navitem"><a href=".">Summary</a></li>
-            <li class="navitem"><a href="projects.html">Research projects</a></li>
+            <li class="navitem"><a href="projects.html">Research</a></li>
             <li class="navitem"><a href="/cv/wjj_cv.pdf">CV</a></li>
         </ul></nav><!-- /#menu -->
     <h1>Authors on W. Jeffrey Johnston</h1>
