--- a/tags.html
+++ b/tags.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
-    <script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154508557-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    ga('create', 'UA-154508557-1', 'auto');
-    ga('send', 'pageview');
-    </script>
+  gtag('config', 'UA-154508557-1');
+</script>
         <title>W. Jeffrey Johnston - Tags</title>
         <meta charset="utf-8" />
 	<link rel="stylesheet" href="./theme/css/main.css" />
