fixed minor typo and updated CV slightly

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@ Freedman. Nonlinear mixed selectivity produces noise-tolerant representations.
 <li><em>Code:</em> Available in
 <a href="https://github.com/wj2/nms_error-correction">this repository</a>.</li>
 </ol>
-<h2>Distributed representation of multiple stimuli</h2>
+<h2>Distributed representations of multiple stimuli</h2>
 <p>I am broadly interested in how different brain regions interact with each other
 to construct representations of stimuli that are integrated across different
 sensory systems and processing streams. I am particularly interested in how
