--- a/projects.html
+++ b/projects.html
@@ -54,11 +54,9 @@ regions and even different kinds of brains. </p>
 <ol>
 <li><em>Submitted manuscript:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer,
 David J. Freedman. Nonlinear mixed selectivity supports reliable neural
-computation. | <a href="https://doi.org/10.1101/577288">preprint</a> </li>
-<li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer, David J.
-Freedman. Nonlinear mixed selectivity produces noise-tolerant representations.
-| <a href="/research_materials/poster_grsgrc2018_ink.pdf">presented at the GRC: Neurobiology of Cognition
-2018</a></li>
+computation. |
+<a href="https://doi.org/10.1371/journal.pcbi.1007544">PLOS Computational Biology</a> |
+<a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/image.pcbi.v16.i02">Cover</a></li>
 <li><em>Code:</em> Available in
 <a href="https://github.com/wj2/nms_error-correction">this repository</a>.</li>
 </ol>
