updated poster for assignment and paper description

--- a/projects.html
+++ b/projects.html
@@ -52,10 +52,10 @@ used to understand the nature of representations across many different brain
 regions and even different kinds of brains. </p>
 <h4>Further materials</h4>
 <ol>
-<li><em>Submitted manuscript:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer,
+<li><em>Paper:</em> <strong>W. Jeffrey Johnston</strong>, Stephanie E. Palmer,
 David J. Freedman. Nonlinear mixed selectivity supports reliable neural
 computation. |
-<a href="https://doi.org/10.1371/journal.pcbi.1007544">PLOS Computational Biology</a> |
+<a href="https://doi.org/10.1371/journal.pcbi.1007544">PLOS Computational Biology, 2020</a> |
 <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/image.pcbi.v16.i02">Cover</a></li>
 <li><em>Code:</em> Available in
 <a href="https://github.com/wj2/nms_error-correction">this repository</a>.</li>
@@ -94,10 +94,10 @@ that are yet to be tested.</p>
 <h4>Further materials</h4>
 <ol>
 <li><em>Recent poster:</em> <strong>W. Jeffrey Johnston</strong> and David J. Freedman.
-Two tradeoffs between local accuracy and catastrophic errors in a solution to
-the representation assignment problem.
-| <a href="/research_materials/poster_assignment_sfn2019.pdf">presented at SfN Neuroscience
-2019</a></li>
+Solutions to the assignment problem balance tradeoffs between local and
+catastrophic errors.
+| <a href="/research_materials/poster_assignment_cosyne2020.pdf">presented at COSYNE
+2020</a></li>
 </ol>
 <h3>Differences in dorsal and ventral stream representations of natural images</h3>
 <p>In my experimental work, I have recorded from the inferotemporal cortex (ITC),
