Updates to CV and research interests

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
     <h1>Summary</h1>
     
 
-    <p>I am a computational neuroscience graduate student in the lab of David Freedman
-at the University of Chicago.</p>
-<p>My research interests center on the neural code. In
-particular, I study how
-populations of neurons in the brain communicate with each other reliably, and
-how this need for reliability has shaped the response properties of single
-neurons as well as the distribution of information across anatomically distinct
-populations of neurons.</p>
+    <p>I am a computational neuroscientist graduate student in the lab of David Freedman
+at the University of Chicago. I recently defended my thesis. </p>
+<p>My research interests center on the neural code. So far, much of my work 
+has focused on how neural representations can be made reliable both within a
+single brain region and when information needs to be integrated across 
+multiple distinct brain regions. In general, I am struck by the extreme disorder
+that has been observed in neural population responses in much of cortex, 
+especially in contrast to the extreme regularity of responses in other neural
+systems. I want to understand both how cortex overcomes this noise, but also why 
+it is so noisy to begin with. </p>
 <table>
 <thead>
 <tr>
@@ -58,6 +60,10 @@ populations of neurons.</p>
 <tr>
 <td><em>Github:</em></td>
 <td><a href="https://github.com/wj2">github.com/wj2</a></td>
+</tr>
+<tr>
+<td>Twitter:</td>
+<td><a href="https://twitter.com/wjeffjohnston">@wjeffjohnston</a></td>
 </tr>
 </tbody>
 </table>
