--- a/projects.html
+++ b/projects.html
@@ -118,6 +118,19 @@ guide behavior.
 | <a href="/research_materials/poster_dvpltsdmst_sfn2018_ink.pdf">presented at SfN Neuroscience
 2018</a></li>
 </ol>
+<h3>Preferential engagement of LIP in trained tasks</h3>
+<p>In other experimental work, we directly compare the same population of neurons 
+in LIP during undirected free-viewing behavior and a highly trained and 
+directed task. While the animal's physical behavior and behavioral markers of
+engagement are very similar across the two contexts, LIP's apparent engagement is
+markedly different. In particular, LIP appears to be preferentially involved in
+stimulus selection during the highly trained task, and much less involved when the
+animal is allowed to freely choose which stimulus to attend to. We connect this
+to other work in LIP showing extensive changes in neural representations due to
+task training. In the context of those results, we argue that LIP may be 
+preferentially engaged in highly trained and reward-motivated behaviors, but less
+involved in unconstrained, exploratory behavior.</p>
+<p>I am currently preparing a manuscript describing these results. </p>
 
   </div>
         <footer id="contentinfo" class="footer">
