--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ it is so noisy to begin with. </p>
 <tbody>
 <tr>
 <td><em>Pronouns:</em></td>
-<td>he/him/his</td>
+<td>he/they</td>
 </tr>
 <tr>
 <td><em>Email:</em></td>
