--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <h1>Summary</h1>
     
 
-    <p>I am a computational neuroscientist graduate student in the lab of David Freedman
-at the University of Chicago. I recently defended my thesis. </p>
+    <p>I am a postdoctoral research scientist in the Center for Theoretical Neuroscience
+at Columbia University. I did my graduate work with David Freedman at The 
+University of Chicago. </p>
 <p>My research interests center on the neural code. So far, much of my work 
 has focused on how neural representations can be made reliable both within a
 single brain region and when information needs to be integrated across 
