--- a/index.html
+++ b/index.html
@@ -34,14 +34,21 @@
     <p>I am a postdoctoral research scientist in the Center for Theoretical Neuroscience
 at Columbia University. I did my graduate work with David Freedman at The 
 University of Chicago. </p>
-<p>My research interests center on the neural code. So far, much of my work 
-has focused on how neural representations can be made reliable both within a
-single brain region and when information needs to be integrated across 
-multiple distinct brain regions. In general, I am struck by the extreme disorder
-that has been observed in neural population responses in much of cortex, 
-especially in contrast to the extreme regularity of responses in other neural
-systems. I want to understand both how cortex overcomes this noise, but also why 
-it is so noisy to begin with. </p>
+<p>In my research, I like to think about how the neural code solves problems 
+such as: remaining robust in the face of noise (or other disorder), allows for 
+generalization across different contexts and between different stimuli, 
+represents multiple different stimuli at once without confusing them, and
+-- of course -- how it does all of this at once! I believe that the fact that
+the brain must often represent multiple stimuli simultaneously is an important 
+constraint on the neural code that is understudied in theoretical neuroscience.
+As a result, much of my current work is at least obliquely related to this 
+topic. </p>
+<p>Outside my research, I am very interested in cooperation (living, eating, sharing
+resources, etc.), I like to imagine and work toward worlds that are freer and more 
+just than the one we have now (or than any world possible under capitalism), I 
+like to read and discuss a variety of things (including anarchism 
+and poetry), I like to go outside (hiking, backpacking, canoeing, canyoneering,
+cross-country skiing), and I like to play tabletop and board games. </p>
 <table>
 <thead>
 <tr>
