added note about RS

--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,8 @@ than previously thought.  </p>
 <p>We attempted to replicate the findings from a sample of 100 previously 
 published studies in the psychology literature -- and from this generated an
 estimate of the replication rate of psychological science. I performed one of
-these replications as a member of the Open Science Collaboration.   </p>
+these replications (with Rebecca Saxe) as a member of the Open Science
+Collaboration.   </p>
 <ul>
 <li>Open Science Collaboration (2015) Estimating the reproducibility of 
 psychological science. <a href="https://doi.org/10.1126/science.aac4716">Science</a>  </li>
