added LIP paper

--- a/projects.html
+++ b/projects.html
@@ -72,9 +72,10 @@ that LIP appears to be preferentially involved in the directed task.
 This suggests that LIP's role in stimulus selection may be more restricted 
 than previously thought.  </p>
 <ul>
-<li><strong>Johnston WJ</strong>, Tetrick SM, Freedman DJ (in preparation) The lateral 
+<li><strong>Johnston WJ</strong>, Tetrick SM, Freedman DJ (2022) The lateral 
    intraparietal area is preferentially engaged in directed tasks rather than 
-   undirected free behavior.  </li>
+   undirected free behavior. 
+   <a href="https://doi.org/10.1101/2022.03.09.483625">bioRxiv</a>  </li>
 </ul>
 <h3>Reproducibility</h3>
 <p>We attempted to replicate the findings from a sample of 100 previously 
