updated CV and changed LIP project text a little

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@ of assignment.  </p>
      balance tradeoffs between local and catastrophic errors.  </li>
 </ul>
 <h3>Directed and undirected tasks</h3>
-<p>We compare recordings from the primate lateral intraparietal area (LIP) 
+<p>We compared recordings from the primate lateral intraparietal area (LIP) 
 during directed and
 undirected visual stimulus selection. While the tasks do sharply differ in 
 reward contingencies and training history (the directed task has contingent 
@@ -69,8 +69,8 @@ rewards and was learned by extensive training, the undirected task has no
 reward contingency and was not trained), they both center on the same action: 
 a saccade selecting a natural image stimulus for overt attention. We show 
 that LIP appears to be preferentially involved in the directed task.
-This suggests that LIP's role in stimulus selection may be more restricted 
-than previously thought.  </p>
+This suggests that LIP's role in stimulus selection may be shaped
+by training and reward contingency.  </p>
 <ul>
 <li><strong>Johnston WJ</strong>, Tetrick SM, Freedman DJ (2022) The lateral 
    intraparietal area is preferentially engaged in directed tasks rather than 
