--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,8 @@ produces noise- tolerant neural representations.
 <p>At a given time, the brain is receiving multiple different kinds of information 
 about multiple different objects that are out in the world. How does it make 
 sense of it all? </p>
-<p>First, animals must bind distinct objects together -- this is referred to as 
+<p>Within a single brain region, animals must bind the different sensory features 
+that arise from a single object together -- this is referred to as 
 the <em>binding problem</em>.
 In collaborative work with Justin Fine and Ben Hayden, we argue that the reward 
 value associated with offers in a risky gambling task performed by monkeys
@@ -66,7 +67,7 @@ be important for efficient learning. </p>
   orthogonalization as a mechanism for binding values to space. 
   <a href="https://doi.org/10.48550/arXiv.2205.06769">arXiv</a></li>
 </ul>
-<p>Next, the animal must integrate across distinct sensory systems -- or distinct
+<p>Across different brain regions, the animal must integrate distinct
 representations of the same set of objects. This is referred to as the 
 <em>assignment problem</em>. For exmaple, in the case of integrating sights with 
 sounds, both sensory systems develop an estimate of the spatial position of
