--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@ be important for efficient learning. </p>
 </ul>
 <p>Across different brain regions, the animal must integrate distinct
 representations of the same set of objects. This is referred to as the 
-<em>assignment problem</em>. For exmaple, in the case of integrating sights with 
+<em>assignment problem</em>. For example, in the case of integrating sights with 
 sounds, both sensory systems develop an estimate of the spatial position of
 the source: we show that this redundancy can be used to correctly assign the two 
 sets of percepts to each other. We also show how likely it is to fail, and how
