--- a/wild_iris/license.html
+++ b/wild_iris/license.html
@@ -16,7 +16,7 @@ This work is licensed under a <a rel="license" href="http://creativecommons.org/
   <p>Johnston WJ (2023). A botanical companion to The Wild Iris. </p>
 </blockquote>
 
-<p>All of the images are referenced to their source and (where known) their license is provided in the bottom right hand corner of each page. I believe that this project is fair use of the images where I could not find a license. </p>
+<p>All of the images are referenced to their source and (where known) their license is provided in the bottom right hand corner of each page. If you believe an image should be removed, please <a href="mailto:wjeffreyjohnston@gmail.com">contact me</a>.</p>
 
 
 <a href="./toc.html">table of contents</a>
