updates to info

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@ the brain must often represent multiple stimuli simultaneously is an important
 constraint on the neural code that is understudied in theoretical neuroscience.
 As a result, much of my current work is at least obliquely related to this 
 topic. </p>
-<p>Outside my research, I am very interested in cooperation (living, eating, sharing
-resources, etc.), I like to imagine and work toward worlds that are freer and more 
-just than the one we have now (or than any world possible under capitalism), I 
-like to read and discuss a variety of things (including anarchism 
-and poetry), I like to go outside (hiking, backpacking, canoeing, canyoneering,
-cross-country skiing), and I like to play tabletop and board games. </p>
+<p>Outside my research, I am a member and steward of the Columbia Postdoctoral Worker 
+union. I am interested in cooperative living, eating, and other forms of sharing 
+resources. Other activities, interests, and hobbies include: working toward police 
+and prison abolition, reading poetry, gardening, learning to paint and draw, 
+playing board games, backpacking, canoeing, canyoneering. </p>
 <table>
 <thead>
 <tr>
@@ -54,7 +53,7 @@ cross-country skiing), and I like to play tabletop and board games. </p>
 </tr>
 <tr>
 <td><em>Email:</em></td>
-<td>wjeffreyjohnston (at) gmail (dot) com</td>
+<td>wjj (at) posteo (dot) net</td>
 </tr>
 <tr>
 <td><em>Github:</em></td>
