--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@ generalization properties for novel tasks (i.e., abstract representations).  </p
 <ul>
 <li><strong>Johnston WJ</strong>, Fusi S (2021) Abstraction emerges naturally in networks 
   trained to perform multiple tasks. 
-  <a href="https://doi.org/10.1101/2021.10.20.465187">bioRxiv</a>  </li>
+  <a href="https://doi.org/10.1038/s41467-023-36583-0">Nature Communications</a>  </li>
 </ul>
 <h3>Robustness in neural codes</h3>
 <p>We show that neural representations can be made more reliable by using 
@@ -63,7 +63,7 @@ subspaces are parallel enough to allow for some generalization of the code for
 value from one spatial location to another. We argue that this commonality may 
 be important for efficient learning. </p>
 <ul>
-<li>Fine JM, <strong>Johnston WJ</strong>, Yoo SBM, Ebitz RB, Hayden BY (2022) Subspace 
+<li><strong>Johnston WJ+</strong>, Fine JM+, Yoo SBM, Ebitz RB, Hayden BY (2022) Subspace 
   orthogonalization as a mechanism for binding values to space. 
   <a href="https://doi.org/10.48550/arXiv.2205.06769">arXiv</a></li>
 </ul>
@@ -76,8 +76,9 @@ sets of percepts to each other. We also show how likely it is to fail, and how
 changing the amount and kind of overlapping information changes the reliability 
 of assignment.  </p>
 <ul>
-<li><strong>Johnston WJ</strong>, Freedman DJ (in preparation) Solutions to the assignment problem 
-     balance tradeoffs between local and catastrophic errors.  </li>
+<li><strong>Johnston WJ</strong>, Freedman DJ (2023) Redundant representations are required to
+  disambiguate simultaneously presented complex stimuli. 
+  <a href="https://doi.org/10.1371/journal.pcbi.1011327">PLOS Computational Biology</a>  </li>
 </ul>
 <h3>Directed and undirected tasks</h3>
 <p>We compared recordings from the primate lateral intraparietal area (LIP) 
